# Polygeist

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  CNAME  README.md  config.toml  index.html  index.xml  sitemap.xml  test_with_pragma.c
isl/: CMakeLists.txt
isl/polly/: configure_isl.cmake  isl_config.h.cmake
lib/polygeist/ExecutionEngine/: CMakeLists.txt  CudaRuntimeWrappers.cpp  PGORuntime.h  RocmRuntimeWrappers.cpp
lib/polygeist/Passes/: AffineCFG.cpp  AffineOpt.cpp  AffineReduction.cpp  AllocaManagement.cpp  AlwaysInliner.h  BarrierRemovalContinuation.cpp  CMakeLists.txt  CanonicalizeFor.cpp  CollectKernelStatistics.cpp  ConvertParallelToGPU.cpp  ConvertPolygeistToLLVM.cpp  ConvertToOpaquePtr.cpp  ForBreakToWhile.cpp  InnerSerialization.cpp  LoopRestructure.cpp  LowerAlternatives.cpp  LowerPolygeistOps.cpp  Mem2Reg.cpp  MemAccGen.cpp  OpenMPOpt.cpp  ParallelLICM.cpp  ParallelLoopDistribute.cpp  ParallelLoopUnroll.cpp  ParallelLoopUnroll.h  ParallelLower.cpp  PassDetails.h  PolygeistCanonicalize.cpp  PolygeistMem2Reg.cpp  PolyhedralOpt.cpp  RaiseToAffine.cpp  RaiseToLinalg.cpp  RemoveDeviceFunctions.cpp  RuntimeWrapperUtils.h  SerializeToCubin.cpp  SerializeToHsaco.cpp  TemporaryStorageElimination.cpp  TrivialUse.cpp
mlir-clang/: .gitignore  CMakeLists.txt  README.md  mlir-clang.cc
mlir-clang/Lib/: AffineUtils.h  CGOptions.h  CGStmt.cc  IfScope.cc  PragmaLowerToHandler.cc  PragmaLowerToHandler.h  ValueCategory.cc  ValueCategory.h  affineUtils.h  clang-mlir.cc  clang-mlir.h  pragmaHandler.cc  pragmaHandler.h  pragmaLowerToHandler.cc  pragmaLowerToHandler.h  utils.cc  utils.h  valueCategory.cc  valueCategory.h
mlir-clang/Test/: CMakeLists.txt  aff.c  canonicalization.c  global.c  lit.cfg  lit.site.cfg.in
mlir-clang/Test/CHStone/aes/: aes.c  aes.h  aes_dec.c  aes_enc.c  aes_func.c  aes_key.c
mlir-clang/Test/Verification/: affun.c  call.c  capture.cpp  classrefmem.cpp  cond.c  cond2.c  der.c  deref.c  dynalloc.c  fscanf.c  fw.c  fwfree.c  gettimeofday.c  globals.c  ker.c  ler.c  lower-to-linalg-op.c  lower_to.c  lowerrecur.c  lum.c  malloc.c  memref-fullrank.c  mer.c  min.c  multidim_init.c  nestloop.c  no_inline.c  nus.c  omp.c  omp2.c  pair.c  pairinit.c  pairptr.c  palloc.c  raiseToAffine.c  raiseToAffineUnsignedCmp.c  red.mlir  redstore.c  redstore2.c  reduction.c  (+22 more)
mlir-clang/Test/polybench/: AUTHORS  CHANGELOG  README
mlir-clang/Test/polybench/utilities/: benchmark_list  clean.pl  create_cpped_version.pl  header-gen.pl  makefile-gen.pl  papi_counters.list  polybench.R  polybench.c  polybench.h  polybench.spec  run-all.pl  time_benchmark.sh
mlir-clang/lib/: clang-mlir.cc  clang-mlir.h  pragmaHandler.h  utils.h
mlir-clang/test/Verification/: call.c  cond2.c  der.c  dynalloc.c  fscanf.c  fw.c  gettimeofday.c  globals.c  ler.c  lower_to.c  lum.c  mer.c  nestloop.c  pair.c  pairptr.c  palloc.c  raiseToAffine.c  reduction.c  ref.cpp  refpair.cpp  scor.c  scor4.c  setter.c  sgesv.c  snus.c  whileset.c  whiletofor.c  x.c
mlir/tools/: CMakeLists.txt
mlir/tools/mlir-clang/: CMakeLists.txt  README.md  mlir-clang.cc
mlir/tools/mlir-clang/Lib/: CMakeLists.txt  MLIRClang.cc  MLIRClang.h  Utils.cc  Utils.h  clang-mlir.cc  clang-mlir.h  islNodeBuilder.cc  mlirCodegen.cc  mlirCodegen.h  operator.h
mlir/tools/mlir-clang/Test/: CMakeLists.txt  aff.c  gemm.c  gemm.mlir  global.c  lit.cfg  lit.site.cfg.in  postInc.mlir
mlir/tools/mlir-pet/: CMakeLists.txt  README.md  islAst.h  islNodeBuilder.cc  islNodeBuilder.h  mlir-pet.cc  mlirCodegen.cc  mlirCodegen.h  operator.h  scop.cc  scop.h  typeTraits.h
mlir/tools/mlir-pet/Lib/: clang-mlir.cc  ctx.h  islAst.cc  islNodeBuilder.cc  mlirCodegen.cc  mlirCodegen.h  scop.cc  scop.h
mlir/tools/mlir-pet/Test/: gemm.mlir  gemver.mlir  lit.cfg  lit.site.cfg.in  loop.mlir  loopDownward.mlir  postInc.mlir  runner.mlir  scalar.mlir  stencil.mlir  symBounds.mlir  syrk.mlir  trisolv.mlir
mlir/tools/mlir-pet/test/: CMakeLists.txt  gemm.mlir  lit.site.cfg.in
mlir/tools/mlir-tblgen/: OpDefinitionsGen.cpp
pet/: CMakeLists.txt  config.h.cmake
tools/cgeist/: .gitignore  ArgumentList.h  CMakeLists.txt  CollectKernelStatistics.cpp  CollectKernelStatistics.h  Options.h  driver.cc
tools/cgeist/Lib/: Attributes.cc  Attributes.h  CGCall.cc  CGDecl.cc  CGExpr.cc  CGStmt.cc  CodeGenTypes.cc  IfScope.cc  TypeUtils.cc  TypeUtils.h  ValueCategory.cc  ValueCategory.h  clang-mlir.cc  clang-mlir.h  pragmaHandler.cc  utils.cc  utils.h
tools/cgeist/Test/: CMakeLists.txt  addressoff_call.cpp  elaborated-init.cpp  lit.cfg  lit.site.cfg.in
tools/mlir-clang/: CMakeLists.txt  mlir-clang.cc
tools/mlir-clang/Lib/: AffineUtils.cc  CGCall.cc  CGStmt.cc  IfScope.cc  IfScope.h  TypeUtils.cc  ValueCategory.cc  clang-mlir.cc  clang-mlir.h  utils.cc  utils.h
tools/mlir-clang/Test/: CMakeLists.txt  aff.c  canonicalization.c  global.c  lit.cfg  lit.site.cfg.in
tools/polygeist-merge-gpu-modules/: CMakeLists.txt  polygeist-merge-gpu-modules.cpp
tools/polygeist-merge-gpu-modules/Test/: CMakeLists.txt  lit.cfg  lit.site.cfg.in
tools/polygeist-opt/: CMakeLists.txt  polygeist-opt.cpp
tools/polymer/: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build  build_cloog.sh  build_openscop.sh  build_pluto.sh  build_polymer_deps.sh  polygeist-version.txt
tools/polymer/Docker/: Dockerfile
tools/polymer/cmake/: AddPluto.cmake  CLooG.cmake  FindGMP.cmake  ISL.cmake  OpenScop.cmake  PLUTO.cmake
tools/polymer/docs/: INSTALL_WITHIN_POLYGEIST.md  LEGACY_INSTALL_METHOD.md  PREREQUISITES.md  WHY_NOT_SUBMODULE_LLVM.md
tools/polymer/example/: flow  gemm-scop-extract.mlir  gemm.mlir  gemm.pluto.c  gemm.pluto.mlir  gemver-scop-extract.mlir  gemver.pluto.c  gemver.pluto.mlir  nussinov-scop-extract.mlir  nussinov.pluto.c  nussinov.pluto.mlir  run.sh
tools/polymer/lib/: CMakeLists.txt
tools/polymer/resources/: polymer.bib
tools/polymer/scripts/: build-with-polygeist.sh  update-llvm.sh  update-pluto.sh  update-polygeist.sh
tools/polymer/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
tools/polymer/tools/: CMakeLists.txt
(+2496 files in other folders)
