add_subdirectory(mlir-cpu-runner)
add_subdirectory(mlir-opt)
add_subdirectory(mlir-reduce)
add_subdirectory(mlir-shlib)
add_subdirectory(mlir-spirv-cpu-runner)
add_subdirectory(mlir-translate)
add_subdirectory(mlir-vulkan-runner)
add_subdirectory(mlir-clang)

set(BUILD_POLYMER OFF CACHE BOOL "Enable building Polymer.")
if (BUILD_POLYMER)
  message(STATUS "Polymer is enabled")
  add_subdirectory(polymer)
else ()
  message(STATUS "Polymer is disabled")
endif()
